<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:translationZ="4dp"
        tools:ignore="UnusedAttribute">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--suppress AndroidElementNotAllowed -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/details_animal_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:ignore="ContentDescription"/>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.GridLayout
                android:id="@+id/details_actions_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:columnCount="7">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"/>

                <LinearLayout
                    android:id="@+id/details_action_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/details_call"
                        android:src="@drawable/ic_call_24dp"
                        android:tint="@color/primary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/details_action_call"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/primary"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"/>

                <LinearLayout
                    android:id="@+id/details_action_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/details_email"
                        android:src="@drawable/ic_email_24dp"
                        android:tint="@color/primary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/details_action_email"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/primary"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"/>

                <LinearLayout
                    android:id="@+id/details_action_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/details_website"
                        android:src="@drawable/ic_web_24dp"
                        android:tint="@color/primary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/details_action_website"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/primary"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_columnWeight="1"/>

            </android.support.v7.widget.GridLayout>

            <View
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha=".25"
                android:background="@color/secondary_text"
                app:layout_constraintTop_toBottomOf="@+id/details_actions_container"/>

            <android.support.v7.widget.GridLayout
                android:id="@+id/details_animal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:columnCount="2"
                app:layout_constraintTop_toBottomOf="@+id/details_actions_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_gender"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_age"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/details_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/details_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/details_size"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/details_location"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/secondary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/details_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"
                    app:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/details_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"
                    app:layout_columnWeight="1"/>

            </android.support.v7.widget.GridLayout>

            <View
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:alpha=".25"
                android:background="@color/secondary_text"
                app:layout_constraintTop_toBottomOf="@+id/details_animal_information"/>

            <TextView
                android:id="@+id/details_animal_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/details_description"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@+id/details_animal_information"/>

            <TextView
                android:id="@+id/details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/primary_text"
                app:layout_constraintTop_toBottomOf="@+id/details_animal_description_label"/>

            <View
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:alpha=".25"
                android:background="@color/secondary_text"
                app:layout_constraintTop_toBottomOf="@+id/details_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/details_description">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_contact_info"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <TextView
                    android:id="@+id/details_location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"/>


                <TextView
                    android:id="@+id/details_location_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/details_location_city_state_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/primary_text"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>